tests/Core/negative/parsing/test010.jvc
def unit := 0;

type Unit {
  unit : Unit;
};
